openapi-mod: Refactor, more ideas
